<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/back_last"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signshine"
        android:minWidth="210dp"
        android:fontFamily="@font/italiano"
        android:textStyle="bold"
        android:textSize="80sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Star ImageView -->
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/star"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintLeft_toRightOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="@id/text"/>

    <!-- Register TextView -->
    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/register"
        android:padding="10dp"
        android:fontFamily="@font/april"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <!-- Username or Email EditText -->
    <EditText
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btsstart"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:fontFamily="@font/april"
        android:hint="@string/username_or_email"
        android:textColor="@color/dark_blue"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCase"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="20dp"
        app:passwordToggleTint="@color/black"
        android:background="@drawable/btsstart"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser">

        <!-- Password EditText -->
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/april"
            android:textColor="@color/dark_blue"
            android:padding="16dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCase2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="20dp"
        app:passwordToggleTint="@color/black"
        android:background="@drawable/btsstart"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCase">

        <!-- Confirm Password EditText -->
        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:fontFamily="@font/april"
            android:textColor="@color/dark_blue"
            android:padding="16dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/btsstart"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintTop_toBottomOf="@+id/etCase2" />
    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintTop_toBottomOf="@+id/etCase2"/>
</androidx.constraintlayout.widget.ConstraintLayout>