<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/back_last"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signshine"
        android:fontFamily="@font/italiano"
        android:textStyle="bold"
        android:textSize="80sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <!-- Star ImageView -->
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintLeft_toRightOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="-5dp"
        android:src="@drawable/star"/>

    <!-- Login TextView -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="10dp"
        android:fontFamily="@font/april"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etUser"
        app:layout_constraintBottom_toBottomOf="@+id/etUser"
        android:layout_marginBottom="80dp"/>

    <!-- Username or Email EditText -->
    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:minHeight="60dp"
        android:minWidth="300dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/btsstart"
        android:layout_marginBottom="350dp"
        android:padding="20dp"
        android:fontFamily="@font/april"
        android:hint="@string/username_or_email"
        android:textColor="@color/dark_blue"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCase"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        app:passwordToggleTint="@color/black"
        android:background="@drawable/btsstart"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_constraintStart_toStartOf="@+id/etUser"
        app:layout_constraintEnd_toEndOf="@+id/etUser">

        <!-- Password EditText -->
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/april"
            android:textColor="@color/dark_blue"
            android:padding="16dp"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register TextView -->
    <TextView
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/april"
        app:layout_constraintTop_toBottomOf="@+id/etCase"
        app:layout_constraintStart_toStartOf="@+id/etUser"
        app:layout_constraintEnd_toEndOf="@+id/etUser"
        android:layout_marginTop="10dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btnReg"
        app:layout_constraintStart_toStartOf="@+id/text"
        app:layout_constraintEnd_toEndOf="@+id/text"
        android:background="@drawable/btsstart"
        android:text="@string/login"/>
</androidx.constraintlayout.widget.ConstraintLayout>