<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.WelcomeActivity">
    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/back_last"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- "SignShine" TextView -->
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signshine"
        android:fontFamily="@font/italiano"
        android:textStyle="bold"
        android:textSize="80sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"/>

    <!-- Star Icon -->
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintLeft_toRightOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="-5dp"
        android:src="@drawable/star" />

    <!-- "Speak with Your Hands" TextView -->
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_with_your_hands"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/zen"
        android:textSize="19sp"
        android:textColor="@color/white"/>

    <!-- "Understand with Your Heart" TextView -->
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/understand_with_your_heart"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/zen"
        android:textSize="19sp"
        android:textColor="@color/white"/>

    <!-- Heart Icon -->
    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintBottom_toBottomOf="@+id/text3"
        android:layout_marginEnd="-20dp"
        android:src="@drawable/heart" />

    <!-- Start Button -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        android:layout_marginTop="100dp"
        android:background="@drawable/btsstart"
        android:text="@string/start"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="25sp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:fontFamily="@font/april"/>
</androidx.constraintlayout.widget.ConstraintLayout>