<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:src="@mipmap/back_last"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/languagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textStyle="bold"
        android:fontFamily="@font/april"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineStart"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineEnd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineMid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/btnArab"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/baselineStart"
        app:layout_constraintEnd_toEndOf="@id/baselineMid"
        android:src="@drawable/arabic_last" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnArab"
        app:layout_constraintStart_toStartOf="@+id/btnArab"
        app:layout_constraintEnd_toEndOf="@+id/btnArab"
        android:text="@string/arabic"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Turkish Button -->
    <ImageView
        android:id="@+id/btnTur"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/btnArab"
        app:layout_constraintStart_toStartOf="@id/baselineMid"
        app:layout_constraintEnd_toEndOf="@id/baselineEnd"
        android:src="@drawable/turkish_last" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnTur"
        app:layout_constraintStart_toStartOf="@+id/btnTur"
        app:layout_constraintEnd_toEndOf="@+id/btnTur"
        android:text="@string/turkish"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- English Button -->
    <ImageView
        android:id="@+id/btnEng"
        android:layout_width="130dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTur"
        app:layout_constraintStart_toStartOf="@id/baselineStart"
        app:layout_constraintEnd_toEndOf="@id/baselineMid"
        android:src="@drawable/english" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnEng"
        app:layout_constraintStart_toStartOf="@+id/btnEng"
        app:layout_constraintEnd_toEndOf="@+id/btnEng"
        android:text="@string/english"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Greece Button -->
    <ImageView
        android:id="@+id/btnGreece"
        android:layout_width="130dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEng"
        app:layout_constraintStart_toStartOf="@id/baselineMid"
        app:layout_constraintEnd_toEndOf="@id/baselineEnd"
        android:src="@drawable/greece" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnGreece"
        app:layout_constraintStart_toStartOf="@+id/btnGreece"
        app:layout_constraintEnd_toEndOf="@+id/btnGreece"
        android:text="@string/greek"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>