<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/back_last"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_button" />

    <!-- BaselineLayouts -->
    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineStart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineEnd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baselineMidV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!-- Hospital Button -->
    <ImageView
        android:id="@+id/btnHosp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/baselineStart"
        app:layout_constraintBottom_toBottomOf="@id/baselineMidV"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/hospital" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnHosp"
        app:layout_constraintStart_toStartOf="@+id/btnHosp"
        app:layout_constraintEnd_toEndOf="@+id/btnHosp"
        android:text="@string/hospital"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Cafe Button -->
    <ImageView
        android:id="@+id/btnCafe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/cafe_last"
        app:layout_constraintBottom_toBottomOf="@id/baselineMidV"
        app:layout_constraintEnd_toEndOf="@+id/baselineEnd"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnCafe"
        app:layout_constraintStart_toStartOf="@+id/btnCafe"
        app:layout_constraintEnd_toEndOf="@+id/btnCafe"
        android:text="@string/cafe"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Train Button -->
    <ImageView
        android:id="@+id/btnTrain"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-80dp"

        app:layout_constraintTop_toTopOf="@id/baselineMidV"
        app:layout_constraintStart_toStartOf="@+id/baselineStart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/train_last" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnTrain"
        app:layout_constraintStart_toStartOf="@+id/btnTrain"
        app:layout_constraintEnd_toEndOf="@+id/btnTrain"
        android:text="@string/train"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Bank Button -->
    <ImageView
        android:id="@+id/btnBank"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-80dp"
        app:layout_constraintTop_toTopOf="@id/baselineMidV"
        app:layout_constraintEnd_toEndOf="@+id/baselineEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/bank_last" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnBank"
        app:layout_constraintStart_toStartOf="@+id/btnBank"
        app:layout_constraintEnd_toEndOf="@+id/btnBank"
        android:text="@string/bank"
        android:fontFamily="@font/april"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>
